force-app/main/default/objects/Contact_Profile_Score__c/Contact_Profile_Score__c.object-meta.xml
<CustomObject>
    <description>Employee Profile Score</description>
    <label>Employee Profile Probe</label>
    <nameField>
        <displayFormat>EPP{00000000}</displayFormat>
        <label>Profile Probe ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Profile Probes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>