force-app/main/default/objects/Contact_Profile_Score__c/fields/Achievement_Profile__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Profile__c</fullName>
    <label>Achievement Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement_Set__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Specialization, Position Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Employee Profile Probes (Achievement Profile)</relationshipLabel>
    <relationshipName>Achievement_Profiles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>