force-app/main/default/objects/Contact_Profile_Score__c/fields/Contact_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement_Set__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee Profile</value>
        </filterItems>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Achievement_Set__c.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Employee Profile Probes (Employee Profile)</relationshipLabel>
    <relationshipName>Contact_Profile_Scores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>