force-app/main/default/objects/Contact_Profile_Score__c/fields/unique_name__c.field-meta.xml
<CustomField>
    <fullName>unique_name__c</fullName>
    <externalId>true</externalId>
    <label>unique name</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>